public/css/chat.css
html, body {
	height: 100%;
}

.main-content {
	position: relative;
	height: 90%; /* fallback if calc not supported */
	height: calc(100% - 70px);
}

.sidebar {
	width: 150px;
	position: absolute;
	right: 0;
	/* These rules for file uploads */
	height: 100%;
	overflow-y: auto;
}

.chat-div {
	position: relative;
	margin-right: 130px;
	height: 100%;
}

.chat-div legend {
	display: none;
}

.chat-messages-div {
	position: absolute;
	overflow-y: auto;
	top: 0;
	bottom: 70px;
	width: 98%;
}

.chat-input {
	position: absolute;
	margin-right: 130px;
	padding-bottom: 9px;
	bottom: 0;
	width: 98%;
}

.chat-input textarea {
	width: 100% !important; /* something in bootstrap 3.1.1 was over-riding this.  a cheap hack for the time being */
	max-height: 55px;
}

/* = Files CSS
-------------------------------------------------------------- */

.server-error, #chat_commands, #sending_msg_div {
	display: none;
}

.file-upload .hidden, #hidden_button {
	display: none;
}

.file-upload .shown {
	display: block;
}

#upload_list {
	list-style-type: none;
}



/*
|--------------------------------------------------------------------------
| Responsive code
|--------------------------------------------------------------------------
| 
| Media queries to make this work with mobile
| 
*/
@media (max-width: 768px) {

	.chat-div {
		margin-right: 0;
	}

	.chat-div legend {
		display: block;
	}

	.sidebar {
		position: relative;
	}

	.chat-messages-div {
		position: relative;
		width: 100%;
	}

	.chat-messages-div {
		position: relative;
		width: 100%;
	}

	.chat-input {
		position: relative;
		width: 100%;
	}

	.chat-textarea {
		float: left;
		width: 88%;
	}
}

